# hunt

./: .gitignore  pyproject.toml
global/base_static/: styles.css
global/js/: scripts.js
global/templates/: base.html
global/templates/partials/: footer.html  head.html  header.html  menu.html  messages.html  pagination.html  search.html
hunt/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py
